--- a/package.json
+++ b/package.json
@@ -46,17 +46,19 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.488.0",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "react": "^18.0.0",
     "react-day-picker": "^9.7.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.58.1",
     "react-phone-number-input": "^3.4.12",
+    "react-query": "^3.39.3",
     "react-resizable-panels": "^3.0.3",
     "react-router-dom": "^7.5.1",
     "recharts": "^2.15.3",
@@ -70,8 +72,8 @@
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@types/node": "^22.14.1",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
