Add react-query for data fetching

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@tabler/icons-react": "^3.34.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@tanstack/react-query-devtools": "^4.40.1",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
@@ -56,6 +57,7 @@
     "react-day-picker": "^9.9.0",
     "react-dom": "^18.0.0",
     "react-dropzone": "^14.3.8",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.62.0",
     "react-phone-number-input": "^3.4.12",
     "react-query": "^3.39.3",
