--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@microsoft/signalr": "^9.0.6",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -52,6 +53,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.488.0",
+    "marked": "^15.0.12",
     "next-themes": "^0.4.6",
     "react": "^18.0.0",
     "react-day-picker": "^9.9.0",
@@ -59,15 +61,20 @@
     "react-dropzone": "^14.3.8",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.62.0",
+    "react-markdown": "^10.1.0",
     "react-phone-number-input": "^3.4.12",
     "react-query": "^3.39.3",
     "react-resizable-panels": "^3.0.4",
     "react-router-dom": "^7.5.1",
     "recharts": "^2.15.4",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1",
+    "shiki": "^3.10.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.3.7",
+    "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2",
     "zod": "^3.25.76",
     "zustand": "^5.0.5"
