Adjust code to Migrate-all-endpoints from AudioEngineersPlatformBackend

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.1",
+    "@hookform/resolvers": "^5.2.2",
     "@microsoft/signalr": "^9.0.6",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@redux-devtools/extension": "^3.3.0",
     "@tabler/icons-react": "^3.34.0",
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-query-devtools": "^4.40.1",
@@ -55,16 +56,17 @@
     "lucide-react": "^0.488.0",
     "marked": "^15.0.12",
     "next-themes": "^0.4.6",
-    "react": "^18.0.0",
-    "react-day-picker": "^9.9.0",
-    "react-dom": "^18.0.0",
+    "react": "19.2.0",
+    "react-day-picker": "^9.11.1",
+    "react-dom": "19.2.0",
     "react-dropzone": "^14.3.8",
     "react-error-boundary": "^6.0.0",
-    "react-hook-form": "^7.62.0",
+    "react-hook-form": "^7.65.0",
+    "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
     "react-phone-number-input": "^3.4.12",
     "react-query": "^3.39.3",
-    "react-resizable-panels": "^3.0.4",
+    "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^7.5.1",
     "recharts": "^2.15.4",
     "remark-breaks": "^4.0.0",
