--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,10 @@ jobs:
         run: npm install
 
       - name: Build and Docker image
-        run: docker build -f Dockerfile -t soundbest-frontend:latest --platform linux/amd64,linux/arm64 .
+        run: docker build -f Dockerfile -t soundbest-frontend:latest .
 
       - name: Tag Docker image
-        uses: docker tag soundbest-frontend:latest stanislawstepkas28016/soundbest-frontend:latest
+        run: docker tag soundbest-frontend:latest stanislawstepkas28016/soundbest-frontend:latest
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -32,4 +32,4 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
       - name: Push image to Dockerhub
-        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/stanislawstepkas28016/soundbest-frontend:latest
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/soundbest-frontend:latest
