--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,13 +8,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Setup SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
       - name: Connect via SSH and re-run docker-compose
         uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_KEY }}
-          port: 22
+          key_path: ~/.ssh/id_rsa
           script:
             sudo -i
             docker-compose down
