--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,5 +18,6 @@ jobs:
             sudo bash -c '
             cd /root
             docker compose down
+            docker compose pull
             docker compose up -d
             '
